# Slots-checker

./: Readme.md  compose-dev.yaml  compose.yaml  env_example  pyproject.toml
app/: dockerfile  requirements.txt
app/src/: main.py  main_.py
app/src/background/: regular.py
app/src/containers/: container.py
app/src/core/: config.py  menu.py  state.py
app/src/db/: redis_storage.py
app/src/handlers/: captcha.py  help.py
app/src/models/: filters.py
app/src/services/: abstract.py  image_service.py  request_service.py
