[tool.poetry]
name = "pass-consult"
version = "0.1.0"
description = ""
authors = ["egor nikitin <eanikitin90gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
